making base service generic